--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.19.1",
     "axios": "^1.7.2",
     "leaflet": "^1.9.4",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
